syntax = "proto3";

package user;

option go_package = "./user;user_v1";

import "google/protobuf/empty.proto";

service UserService {
    rpc getUserPrivate (UserSearchParams) returns (User);
    rpc getEmployerListPrivate (google.protobuf.Empty) returns (UserListPrivate);
    rpc createSessionUser (google.protobuf.Empty) returns (User);
}

// entities

enum UserRole {
    UNKNOWN = 0;
    CUSTOMER = 1;
    SUPPORT = 2;
    ADMIN = 3;
    ROOT = 4;
}

message User {
    string id = 1;
    UserRole role = 2;
    string email = 3;
    string password = 4;
    bool isAuth = 5;
}

// requests

message UserSearchParams {
    optional string id = 1;
    optional string email = 2;
}

// responces

message UserListPrivate {
    repeated User items = 1;
}
